add weather service; fix sonarqube warnings