@@ -1,7 +1,6 @@
 package com.vishal.journalbackend.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,6 +15,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.vishal.journalbackend.entity.JournalEntry;
+import com.vishal.journalbackend.entity.JournalEntryDTO;
 import com.vishal.journalbackend.entity.User;
 import com.vishal.journalbackend.service.JournalEntryService;
 import com.vishal.journalbackend.service.UserService;
@@ -28,14 +28,21 @@ import org.springframework.web.bind.annotation.RequestBody;
 @RequestMapping("/journal")
 public class JournalEntryController {
 
-    @Autowired
-    private JournalEntryService journalEntryService;
+    private static final String JOURNAL_ENTRY_NOT_FOUND = "Journal entry not found with id: ";
+    private static final String INVALID_ID_FORMAT_PREFIX = "Invalid Id format: '";
+    private static final String INVALID_ID_FORMAT_SUFFIX = "'.\nId should be a 24 characters hexString.";
+
+    private final JournalEntryService journalEntryService;
+    private final UserService userService;
 
     @Autowired
-    private UserService userService;
+    public JournalEntryController(JournalEntryService journalEntryService, UserService userService) {
+        this.journalEntryService = journalEntryService;
+        this.userService = userService;
+    }
 
     @GetMapping
-    public ResponseEntity<?> getAllJournalEntriesOfUser() {
+    public ResponseEntity<List<JournalEntry>> getAllJournalEntriesOfUser() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String username = authentication.getName();
         User user = userService.findByUsername(username);
@@ -47,10 +54,15 @@ public class JournalEntryController {
     }
 
     @PostMapping
-    public ResponseEntity<?> createEntry(@RequestBody JournalEntry entry) {
+    public ResponseEntity<Object> createEntry(@RequestBody JournalEntryDTO entryDTO) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String username = authentication.getName();
         User user = userService.findByUsername(username);
+
+        JournalEntry entry = new JournalEntry();
+        entry.setTitle(entryDTO.getTitle());
+        entry.setContent(entryDTO.getContent());
+
         try {
             journalEntryService.saveEntry(entry, user);
             return ResponseEntity.status(HttpStatus.CREATED).body(entry);
@@ -60,26 +72,26 @@ public class JournalEntryController {
     }
 
     @GetMapping("/id/{id}")
-    public ResponseEntity<?> getJournalEntryById(@PathVariable String id) {
+    public ResponseEntity<Object> getJournalEntryById(@PathVariable String id) {
         try {
             ObjectId objectId = new ObjectId(id);
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             String username = authentication.getName();
             User user = userService.findByUsername(username);
             List<JournalEntry> journalEntries = user.getJournalEntries().stream().filter(
-                    x -> x.getId().equals(objectId)).collect(Collectors.toList());
+                    x -> x.getId().equals(objectId)).toList();
             if (!journalEntries.isEmpty()) {
                 return ResponseEntity.ok(journalEntries.get(0));
             }
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Journal entry not found with id: " + id);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(JOURNAL_ENTRY_NOT_FOUND + id);
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Invalid Id format: '" + id + "'.\nId should be a 24 characters hexString.");
+                    .body(INVALID_ID_FORMAT_PREFIX + id + INVALID_ID_FORMAT_SUFFIX);
         }
     }
 
     @DeleteMapping("/id/{id}")
-    public ResponseEntity<?> deleteJournalEntryById(@PathVariable String id) {
+    public ResponseEntity<Object> deleteJournalEntryById(@PathVariable String id) {
         try {
             ObjectId objectId = new ObjectId(id);
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -89,25 +101,30 @@ public class JournalEntryController {
             if (removed) {
                 return ResponseEntity.noContent().build();
             }
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Journal entry not found with id: " + id);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(JOURNAL_ENTRY_NOT_FOUND + id);
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Invalid Id format: '" + id + "'.\nId should be a 24 characters hexString.");
+                    .body(INVALID_ID_FORMAT_PREFIX + id + INVALID_ID_FORMAT_SUFFIX);
         }
     }
 
     @PutMapping("/id/{id}")
-    public ResponseEntity<?> updateJournalEntryById(@PathVariable String id,
-            @RequestBody JournalEntry newEntry) {
+    public ResponseEntity<Object> updateJournalEntryById(@PathVariable String id,
+            @RequestBody JournalEntryDTO newEntryDTO) {
         try {
             ObjectId objectId = new ObjectId(id);
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             String username = authentication.getName();
             User user = userService.findByUsername(username);
             List<JournalEntry> journalEntries = user.getJournalEntries().stream().filter(
-                    x -> x.getId().equals(objectId)).collect(Collectors.toList());
+                    x -> x.getId().equals(objectId)).toList();
             if (!journalEntries.isEmpty()) {
                 JournalEntry oldEntry = journalEntries.get(0);
+
+                JournalEntry newEntry = new JournalEntry();
+                newEntry.setTitle(newEntryDTO.getTitle());
+                newEntry.setContent(newEntryDTO.getContent());
+
                 oldEntry.setTitle((newEntry.getTitle() != null &&
                         !newEntry.getTitle().isEmpty()) ? newEntry.getTitle()
                                 : oldEntry.getTitle());
@@ -117,10 +134,10 @@ public class JournalEntryController {
                 journalEntryService.saveEntry(oldEntry);
                 return ResponseEntity.ok(oldEntry);
             }
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Journal entry not found with id: " + id);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(JOURNAL_ENTRY_NOT_FOUND + id);
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Invalid Id format: '" + id + "'.\nId should be a 24 characters hexString.");
+                    .body(INVALID_ID_FORMAT_PREFIX + id + INVALID_ID_FORMAT_SUFFIX);
         }
     }
 
